--- a/TheGame.html
+++ b/TheGame.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="TheGame.css">
 </head>
 <body>
-    <button id="refresh">Refresh</button>
+    <!-- <button id="refresh">Refresh</button> -->
     <script type="text/javascript" src="TheGame.js"></script>
     <!-- <table>
         <tr>
