tried to create objects, but didn't work

--- a/TheGame.html
+++ b/TheGame.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <!-- <button id="refresh">Refresh</button> -->
+    <script src="TheGameFiles/Enemy.js"></script>
     <script type="text/javascript" src="TheGame.js"></script>
     <!-- <table>
         <tr>
